# prompter-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: fonts.rs  furigana.rs  manuscript.rs  mod.rs  settings.rs
src-tauri/src/models/: manuscript.rs  mod.rs  settings.rs
src/commands/: tauri.ts
src/components/common/: Button.css  Button.tsx  ColorPicker.css  ColorPicker.tsx  ConfirmDialog.css  ConfirmDialog.tsx  DropdownMenu.css  DropdownMenu.tsx  FontSelect.css  FontSelect.tsx  Modal.css  Modal.tsx  NumberInput.tsx  ToggleSwitch.css  ToggleSwitch.tsx
src/components/display/: DisplayContainer.css  DisplayContainer.tsx  SlideIndicator.css  SlideIndicator.tsx  SlideRenderer.css  SlideRenderer.tsx
src/components/editor/: EditorToolbar.css  EditorToolbar.tsx  FindReplaceBar.css  FindReplaceBar.tsx  ImportDialog.css  ImportDialog.tsx  KeyAssignDialog.css  KeyAssignDialog.tsx  PreviewModal.css  PreviewModal.tsx  PreviewPanel.css  (+7 more)
src/hooks/: useKeyBinding.ts  useKonami.ts  useWheelNavigation.ts
src/i18n/: en.ts  index.ts  ja.ts
src/screens/: DisplayScreen.css  DisplayScreen.tsx  EditScreen.css  EditScreen.tsx  MenuScreen.css  MenuScreen.tsx  SettingsScreen.css  SettingsScreen.tsx
src/stores/: displayStore.ts  manuscriptStore.ts  settingsStore.ts
src/styles/: global.css  themes.css  variables.css
src/types/: manuscript.ts  settings.ts
src/utils/: segments.ts
