[package]
name = "prompter-desktop"
version = "0.1.0"
description = "Teleprompter editor and display application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.0", features = [] }
tauri-plugin-dialog = "2"
toml = "0.8"
lindera = { version = "2", features = ["embed-ipadic"] }
font-kit = "0.14"
